--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <link rel="icon" href="./favicon.ico"/>
+
   <link
     href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet"
@@ -11,6 +12,8 @@
     rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
   />
+  <link rel="stylesheet" href="/node_modules/@rainbow-me/rainbowkit/dist/index.css">
+
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="theme-color" content="#03a9f4"/>
   <meta
