--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     name="description"
     content="Example pages using Material Tailwind"
   />
-  <title>Material Tailwind Kit React</title>
+  <title>BetMe</title>
   <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
 
 </head>
