--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta name="theme-color" content="#03a9f4"/>
   <meta
     name="description"
-    content="Example pages using Material Tailwind"
+    content="Decentralized P2P betting platform"
   />
   <title>BetMe</title>
   <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
